[package]
name = "ytc-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
eyre = "0.6"
ethers = { git = "https://github.com/gakonst/ethers-rs" }
rayon = "1.5"
tokio = "1.21.1"
tracing = "0.1"